<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_uv_index">UV Index</string>
    <string name="menu_forecast">Forecast</string>
    <string name="menu_select_city">Select City</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="search">Search</string>
    <string name="your_city_is">Your city is</string>
    <string name="wind_speed">Wind Speed : </string>
    <string name="max">Max :</string>
    <string name="min">Min :</string>
    <string name="wind_degree">Wind Degree : </string>
    <string name="pressure">Pressure :</string>
    <string name="humidity">Humidity :</string>

    <string name="wind_speed_concat">%1$s m/s</string>
    <string name="cloud_concat">%1$s \n %2$s</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="ground_level">Ground Level:</string>
    <string name="sea_level">Sea Level :</string>
    <string name="close_app_message">Do you want to close App?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
