<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_2sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkGrey">

            <TextView
                android:id="@+id/tvDate"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                tools:text="sat, Dec 5, 2019 " />

            <TextView
                android:id="@+id/tvTime"
                style="@style/extraExtraLargeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                app:layout_optimizationLevel="barrier"
                tools:text="12:56 AM" />

            <TextView
                android:id="@+id/tvTemperature"
                style="@style/extraExtraExtraExtraLargeWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/tvDate"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                tools:text="50" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView4"
                style="@style/mediumWhiteCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintWidth_percent="0.3"
                tools:text="Smoke And Sm,oke" />

            <TextView
                android:id="@+id/textView5"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:text="@string/wind_speed"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/tvTime" />

            <TextView
                android:id="@+id/textView9"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="31" />

            <TextView
                android:id="@+id/textView10"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:text="31" />

            <TextView
                android:id="@+id/tvWindSpeed"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/tvTime"
                tools:text="20km/h" />

            <TextView
                android:id="@+id/tvWindSpeed2"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/max"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvWindSpeed3"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/min"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed2" />

            <TextView
                android:id="@+id/textView6"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/wind_degree"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tvWindDirection"
                style="@style/normalWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="North East" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintHeight_percent="0.03"
                app:layout_constraintStart_toEndOf="@+id/tvTemperature"
                app:layout_constraintTop_toTopOf="@+id/tvTemperature"
                app:srcCompat="@drawable/small_circle" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintHeight_percent="0.03"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:srcCompat="@drawable/small_circle" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintHeight_percent="0.03"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:srcCompat="@drawable/small_circle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>